--- a/index.html
+++ b/index.html
@@ -3,9 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucinda Shea | Home</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Lucinda</title>
 </head>
 <body>
-    
+    <div class="index-container">
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">LinkedIn</a>
+        </nav>
+
+        <header>
+            <img src="images/cat.jpg" alt="Cat Picture" height="250px">
+            <h1>Lucinda</h1>
+            <p>Bachelors of Arts</p>
+        </header>
+
+        <main>
+            <section class="main-volunteer-work">
+                <h2>Volunteer Work</h2>
+                <ul class="main">
+                    <li>a</li>
+                    <li>a</li>
+                    <li>a</li>
+                    <li>a</li>
+                    <li>a</li>
+                </ul>
+            </section>
+
+            <section class="main-skills">
+                <h2>Skills</h2>
+                <ul class="main">
+                    <li>a</li>
+                    <li>a</li>
+                    <li>a</li>
+                    <li>a</li>
+                    <li>a</li>
+                </ul>
+            </section>
+
+            <section class="main-about-me">
+                <h2>About Me</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae molestias, laborum corrupti, cupiditate quisquam veritatis vero numquam quidem, non aliquam eaque hic totam nam veniam deleniti nemo alias iure dolorem.
+                Laboriosam, eos provident! Consequatur, magni? Facere, praesentium fugiat ipsam dicta, ea asperiores doloremque nesciunt quae, repudiandae obcaecati voluptatum! Ducimus non fuga ipsam dolores eum sunt suscipit nesciunt quam laborum nostrum.
+                Beatae harum magnam aliquam veritatis amet optio veniam illo eos voluptatem corrupti culpa qui esse, ratione fuga, minima earum libero sint quam? Placeat repellat consequuntur quae, adipisci fugiat eum maiores.</p>
+            </section>
+        </main>
+
+        <footer>
+            <nav class="footer">
+                <a href="#">Home</a>
+                <a href="#">LinkedIn</a>
+            </nav>
+        </footer>
+    </div>
 </body>
 </html>
