Fixed up the header section
Will re-work if requested

--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 </head>
 <body>
     <div class="index-container">
-        <nav>
+        <nav class="header">
             <a href="#">Home</a>
             <a href="#">LinkedIn</a>
         </nav>
 
         <header>
-            <img src="images/cat.jpg" alt="Cat Picture" height="250px">
-            <h1>Lucinda</h1>
-            <p>Bachelors of Arts</p>
+            <section class="header-image">
+                <img src="images/cat.jpg" alt="Cat Picture" height="250px">
+            </section>
+            <section class="header">
+                <h1>Lucinda</h1>
+                <p>Bachelors of Arts</p>
+            </section>
         </header>
 
         <main>
