--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <section class="main-volunteer-work">
                 <h2>Volunteer Work</h2>
                 <ul class="main">
-                    <li>a</li>
+                    <li>Worked here and there for a bit you know, hours</li>
                     <li>a</li>
                     <li>a</li>
                     <li>a</li>
